<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_normal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/k_endpointnumber"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointaddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointattributes"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointdirection"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointinterval"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointmaxpacketsize"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:text="@string/k_endpointtype"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    
    <TextView
        android:id="@+id/tv_item_endpointnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <TextView
        android:id="@+id/tv_item_endpointaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointnumber"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tv_item_endpointattributes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointaddress"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tv_item_endpointdirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointattributes"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tv_item_endpointinterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointdirection"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/tv_item_endpointmaxpacketsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointinterval"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
        android:id="@+id/tv_item_endpointtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_endpointnumber"
        android:layout_below="@+id/tv_item_endpointmaxpacketsize"
        android:text="@string/emapty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
